--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,13 @@
 		<filter-name>ObjectifyFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<servlet>
+		<servlet-name>AdvertisementServlet</servlet-name>
+		<servlet-path>istic.project.servlets.AdvertisementServlet</servlet-path>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AdvertisementServlet</servlet-name>
+		<url-pattern>/api/advertisements</url-pattern>
+	</servlet-mapping>
 </web-app>
